--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,8 +21,8 @@ grid-gap: 10px;
 #main{
     text-align: center;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 3fr 1fr 1fr;
     grid-gap: 10px;
     margin: 10px;
     padding: 10px;
@@ -47,9 +47,21 @@ grid-gap: 10px;
     border-radius: 5px;
 
 }
-.number{
+.number1{
     background-color: bisque;
     height: 50px;
-    display: grid;
-
+    grid-column: 1/3;
+    grid-row: 4/5;
+}
+.number2{
+    background-color: bisque;
+    height: 50px;
+    grid-column: 3/5;
+    grid-row: 4/5;
+}
+.number3{
+    background-color: bisque;
+    height: 50px;
+    grid-row: 5/6;
+    grid-column: 1/5;
 }
