--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,12 @@
 .conteiner{
     display: grid;
     width: 100%;
-    height: 800px;
+    height: 100vh;
     grid-template-areas: "header header header"
     "main main aside"
     "footer footer footer";
 grid-template-columns: 1fr 1fr 1fr;
-grid-template-rows: 10% 1fr 12%;
+grid-template-rows: 10% 1fr 10%;
 grid-gap: 10px;
 }
 .header{
@@ -16,13 +16,14 @@ grid-gap: 10px;
 .main{
     background-color: lightyellow;
     grid-area: main;
+    display: grid;
    
 }
 #main{
     text-align: center;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 3fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     grid-gap: 10px;
     margin: 10px;
     padding: 10px;
@@ -50,18 +51,18 @@ grid-gap: 10px;
 .number1{
     background-color: bisque;
     height: 50px;
-    grid-column: 1/3;
-    grid-row: 4/5;
+    grid-column: 1/2;
+    grid-row: 1/1;
 }
 .number2{
     background-color: bisque;
     height: 50px;
-    grid-column: 3/5;
-    grid-row: 4/5;
+    grid-column: 2/2;
+    grid-row: 1/2;
 }
 .number3{
     background-color: bisque;
     height: 50px;
-    grid-row: 5/6;
-    grid-column: 1/5;
+    grid-row: 2/2;
+    grid-column: 1/3;
 }
